--- a/Database Maintenance/SQL/Fetch_Data_New_Final.ipynb
+++ b/Database Maintenance/SQL/Fetch_Data_New_Final.ipynb
@@ -2,10 +2,43 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "209a1a93-475e-4a3b-a003-c7e45fe209c7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter O for Options data, U for Underlying data, B for Both the data, E for Exiting  U\n",
+      "Enter the index you want in the format below - \n",
+      "BankNifty\n",
+      "Nifty\n",
+      "FinNifty\n",
+      "IndiaVix  Nifty\n",
+      "Enter start date as YYYY-MM-DD  2019-01-01\n",
+      "Enter end date as YYYY-MM-DD  2023-05-31\n",
+      "Enter 1 for 1 minute, 5 for 5 minutes, 15 for 15 minutes, E for EOD, A for All timeframes\n",
+      " A\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "GENERATING UNDERLYING DATA\n",
+      "CONVERTING TO EOD\n",
+      "CONVERTING TO 15min\n",
+      "CONVERTING TO 5min\n",
+      "UNDERLYING DATA GENERATED!\n",
+      "elapsed_time: 23.082990884780884\n",
+      "\n",
+      "COMPLETED.\n",
+      "Total time taken  23.130911827087402\n"
+     ]
+    }
+   ],
    "source": [
     "#import the modules\n",
     "import psycopg2 as pg\n",
@@ -443,7 +476,6 @@
     "    end_date = end_date.date()\n",
     "    print(\"\\nGENERATING UNDERLYING DATA\")\n",
     "    st = time.time()\n",
-    "    \n",
     "    engine = pg.connect(\"dbname='IndexEQ' user='postgres' host='swandatabase.cfehmk2wtejq.ap-south-1.rds.amazonaws.com' port='5432' password='swancap123'\")\n",
     "    ddf = pd.read_sql(f'select * from \"{index}\".\"AllData\" where \"Date\" between \\'{date1}\\' and \\'{date2}\\'', con=engine)\n",
     "    ddf['Ticker'] = f'{index.upper()}' + '.EQ-NSE'\n",
@@ -491,6 +523,7 @@
     "    date1 = input(\"Enter start date as YYYY-MM-DD \")\n",
     "    date2 = input(\"Enter end date as YYYY-MM-DD \")\n",
     "    conversion = input(\"Enter 1 for 1 minute, 5 for 5 minutes, 15 for 15 minutes, E for EOD, A for All timeframes\\n\")\n",
+    "    greeks_input = 'N'\n",
     "\n",
     "elif data == 'e' or data == 'E':\n",
     "    print(\"Exit!\")\n",
@@ -510,7 +543,7 @@
     "    option_data(index,date1,date2,conversion,schema)\n",
     "    underlying_data(index,date1,date2,conversion)\n",
     "\n",
-    "if greeks_input == 'y' or greeks_input == 'Y':\n",
+    "if (greeks_input == 'y' or greeks_input == 'Y'):\n",
     "    \n",
     "    if conversion == 'E':\n",
     "        def greeks(Spot, Strike, MTE, OPT, Option_Type):\n",
@@ -979,6 +1012,14 @@
     "print(\"\\nCOMPLETED.\")\n",
     "print(\"Total time taken \",end_time-start_time)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2c4e8bd6-0f39-4667-8dc1-bf7483d98ce0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
