--- a/Systems/100_Baggers/Linc Ltd/Notes/FY23 Q1.md
+++ b/Systems/100_Baggers/Linc Ltd/Notes/FY23 Q1.md
@@ -22,7 +22,7 @@
 ```diff
 
 ! Increasing crude & polymer prices are affecting the input cost.
-
+! 3% of the revenues = Advertisement spend
 
 ```
 
@@ -51,7 +51,8 @@
 #### Capex [<img align="centre" alt="Java" width="50px" src="https://github.com/qodeinvestments/Swan-Documentation/blob/main/Systems/100_Baggers/github_pages/logo_files/Capex%20Logo%201.jpg" />][capex]
 ```diff
 
-- The total cost for the expansion plan at Gujarat is expected to be around 50 Cr. First Phase will cost 35 Cr, will be operational by FY24.
+- The total cost for the expansion plan at Gujarat is expected to be around 50 Cr. First Phase will cost 35 Cr, will be operational by FY24 (Infrastructure & machnines).
+- Expansion will be largely funded intermal accural & small level of not more than 15 Cr.
 
 
 ```
@@ -61,7 +62,7 @@
 #### Strategy [<img align="centre" alt="Java" width="50px" src="https://github.com/qodeinvestments/Swan-Documentation/blob/main/Systems/100_Baggers/github_pages/logo_files/Strategy%20Logo%203.jpg" />][strategy]
 ```diff
 
-# Increasing Touch Points: Co. increased its touch points from 5000 to 1 Lakh outlets from FY20 to FY22.Expects to reach 5 Lakh touch points by FY25.  
+# Increasing Touch Points: Co. increased its touch points from 5000 to 1.2 Lakh outlets from FY20 to FY23.  
 
 
 
@@ -90,6 +91,7 @@
 # Expects to reach 5 lakh touch points by FY25.
 # Trying to leverage the existing network, to distribute stationary products other than pens.
 # Working towards reducing Carbon Footprints.
+# Pentonic revenue is expected to contribute 32% of total revenue, and Deli to contribute 15%, till FY25.
 
 
 
