--- a/Database Maintenance/SQL/Fetch_Data_New_Final.ipynb
+++ b/Database Maintenance/SQL/Fetch_Data_New_Final.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "id": "209a1a93-475e-4a3b-a003-c7e45fe209c7",
    "metadata": {},
    "outputs": [
@@ -10,16 +10,17 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "Enter O for Options data, U for Underlying data, B for Both the data, E for Exiting  U\n",
+      "Enter O for Options data, U for Underlying data, B for Both the data, E for Exiting  O\n",
       "Enter the index you want in the format below - \n",
       "BankNifty\n",
       "Nifty\n",
-      "FinNifty\n",
-      "IndiaVix  Nifty\n",
-      "Enter start date as YYYY-MM-DD  2019-01-01\n",
+      "FinNifty  FinNifty\n",
+      "Enter schema (MonthlyI, MonthlyII , WeeklyI , QuarterlyI and so on) -  MonthlyII\n",
+      "Enter start date as YYYY-MM-DD  2021-01-01\n",
       "Enter end date as YYYY-MM-DD  2023-05-31\n",
       "Enter 1 for 1 minute, 5 for 5 minutes, 15 for 15 minutes, E for EOD, A for All timeframes\n",
-      " A\n"
+      " 15\n",
+      "Enter Y if you want Greeks or N  Y\n"
      ]
     },
     {
@@ -27,15 +28,44 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "GENERATING UNDERLYING DATA\n",
-      "CONVERTING TO EOD\n",
-      "CONVERTING TO 15min\n",
-      "CONVERTING TO 5min\n",
-      "UNDERLYING DATA GENERATED!\n",
-      "elapsed_time: 23.082990884780884\n",
+      "GENERATING OPTIONS DATA\n",
+      "Generating data from  2021-01-01  to  2021-12-31\n",
+      "CONVERTING TO 15Min\n",
+      "Generating data from  2022-01-01  to  2022-12-31\n",
+      "CONVERTING TO 15Min\n",
+      "Generating data from  2023-01-01  to  2023-05-31\n",
+      "CONVERTING TO 15Min\n",
+      "OPTIONS DATA GENERATED!\n",
+      "elapsed_time: 0.8047809600830078\n",
+      "\n",
+      "Greeks Generated!\n",
+      "Time taken to generate greeks 0.2790257930755615\n",
+      "Start time :  2023-08-17 11:45:16.014274\n",
+      "symbolFilename : FINNIFTYMONTHLY-II\n",
+      "symbol : FINNIFTYMONTHLY\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "908dc27b544746099a4584fe206c17d0",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/322 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "\n",
       "COMPLETED.\n",
-      "Total time taken  23.130911827087402\n"
+      "Total time taken  22.186803579330444\n"
      ]
     }
    ],
@@ -282,7 +312,7 @@
     "                                        'Volume' : 'Adj_Volume',\n",
     "                                        'Open Interest' : 'Adj_OI',        \n",
     "                                        'Option_type' : 'Option_Type'})\n",
-    "    final_df['Date'] = pd.to_datetime(final_df['Date'],dayfirst=True).dt.date\n",
+    "    final_df['Date'] = pd.to_datetime(final_df['Date'],format='mixed',dayfirst=True).dt.date\n",
     "    final_df = final_df.sort_values(by=['Date', 'Timestamp'])\n",
     "    final_df['Date'] = final_df['Date'].astype(str)\n",
     "    final_df['Timestamp'] = final_df['Timestamp'].astype(str)\n",
@@ -314,6 +344,7 @@
     "    df_eod = df_eod.drop(['First_OI','Last_OI','Option_Type','Final_strike','rem'],axis=1)\n",
     "    df_eod = df_eod[['Ticker','Date','Time','Open','High','Low','Close','Volume','Open_Interest']]\n",
     "    df_eod.reset_index(drop=True,inplace=True)\n",
+    "    df_eod = df_eod.drop_duplicates()\n",
     "    df_eod.to_csv(fr\"C:\\\\users\\\\{admin_path}\\\\desktop\\\\{index}_{schema}_Data\\\\{index}_{schema}_Opt_15min.csv\", mode='a', header = not os.path.exists(fr\"C:\\\\users\\\\{admin_path}\\\\desktop\\\\{index}_{schema}_Data\\\\{index}_{schema}_Opt_15min.csv\"), index=False)\n",
     "    \n",
     "def five_min(ddf,index,schema,hyphen_index):\n",
@@ -437,6 +468,7 @@
     "        print(\"Generating data from \", year_start , \" to \" , year_end)\n",
     "        ddf = pd.read_sql(f'select * from \"{index}{schema}\".select_datewise(\\'{year_start}\\',\\'{year_end}\\')',con=engine)\n",
     "        ddf = ddf.sort_values(by=[\"date\",'time'])\n",
+    "        ddf = ddf.drop_duplicates()\n",
     "        ddf.reset_index(drop=True,inplace=True)\n",
     "        # with open(f\"C:\\\\Users\\\\Admin\\\\Desktop\\\\{index}_{schema}_Data\\\\{index}_{schema}_\"+str(i)+\".csv\", \"w\") as file:\n",
     "        #     cursor.copy_expert(sql, file)\n",
@@ -527,6 +559,7 @@
     "\n",
     "elif data == 'e' or data == 'E':\n",
     "    print(\"Exit!\")\n",
+    "    greeks_input = 'N'\n",
     "\n",
     "else:\n",
     "    print(\"Wrong option\")\n",
@@ -543,7 +576,7 @@
     "    option_data(index,date1,date2,conversion,schema)\n",
     "    underlying_data(index,date1,date2,conversion)\n",
     "\n",
-    "if (greeks_input == 'y' or greeks_input == 'Y'):\n",
+    "if ((greeks_input == 'y' or greeks_input == 'Y') & (data != 'e' or data != 'E')):\n",
     "    \n",
     "    if conversion == 'E':\n",
     "        def greeks(Spot, Strike, MTE, OPT, Option_Type):\n",
@@ -884,6 +917,7 @@
     "        opt_df.rename(columns={'Adj_Open':'Open','Adj_High':'High','Adj_Low':'Low','Adj_Close':'Close'},inplace=True)\n",
     "        opt_df = opt_df[['Ticker','Date', 'Time', 'Open','High','Low','Close','Volume','Open_Interest','EQ_Open','EQ_High','EQ_Low','EQ_Close','Expiry_Date','IV', 'Delta', 'Gamma', 'Theta', 'Vega',\"Option_Type\",'Final_strike']]\n",
     "        opt_df=opt_df.reset_index(drop=True)\n",
+    "        opt_df = opt_df.drop_duplicates()\n",
     "        opt_df.to_csv(rf'C:\\\\users\\\\admin\\\\desktop\\\\{index}_{schema}_Greeks_{conversion}min.csv',index=False)\n",
     "        print(\"\\nGreeks Generated!\")\n",
     "        et_g = time.time()\n",
@@ -926,13 +960,14 @@
     "        #     df['Option_Type'] = np.where((df['Option_Type'] == 'CE') | (df['Option_Type'] == 'PE'),\n",
     "        #                                  df['Option_Type'], 'XX')\n",
     "        # get the symbol from filename\n",
-    "        symbolFilename = index.upper()+schema.upper()\n",
+    "        symbolFilename = index.upper()+schema[:schema.find('y')+1].upper()+'-'+schema[schema.find('y')+1:]\n",
+    "        # symbolFilename = index.upper()+schema.upper()\n",
     "        print('symbolFilename :', symbolFilename)\n",
     "        \n",
     "        # remove '-I'/'-II'/'-III' from filename\n",
-    "        symbol = symbolFilename.replace('-III', '').replace('III','')\n",
-    "        symbol = symbol.replace('-II', '').replace('II', '')\n",
-    "        symbol = symbol.replace('-I', '').replace('I', '')\n",
+    "        symbol = symbolFilename.replace('-III', '')#.replace('III','')\n",
+    "        symbol = symbol.replace('-II', '')#.replace('II', '')\n",
+    "        symbol = symbol.replace('-I', '')#.replace('I', '')\n",
     "        print('symbol :', symbol)\n",
     "        \n",
     "        # substitute any special characters ('-', '&', '_') in Dispersion file names with empty string ('_')\n",
@@ -1004,7 +1039,7 @@
     "                    except Exception as e1:\n",
     "                        print('e1 : ', e1)\n",
     "            # write output to csv\n",
-    "            group.to_csv(output_path + symbolFilename + '.csv', mode='a', header=not os.path.exists(output_path + symbolFilename + '.csv'), index=False)\n",
+    "            group.to_csv(output_path + symbolFilename + \"_\" + conversion + 'min.csv', mode='a', header=not os.path.exists(output_path + symbolFilename + \"_\" + conversion + 'min.csv'), index=False)\n",
     "        \n",
     "        del opt_df,eq_df\n",
     "        \n",
@@ -1016,7 +1051,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2c4e8bd6-0f39-4667-8dc1-bf7483d98ce0",
+   "id": "ace000ee-dfdd-4d9e-b53f-aea6726cdc8b",
    "metadata": {},
    "outputs": [],
    "source": []
